--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "symfony/framework-bundle": "^2.7 || ^3.0",
-        "symfony/var-dumper": "^3.3",
+        "symfony/var-dumper": "^2.7 || ^3.0",
         "cache/taggable-cache": "^1.0",
         "cache/session-handler": "^1.0",
         "nyholm/nsa": "^1.1"
